--- a/ieee_spm/adjoints_in_gradients.bib
+++ b/ieee_spm/adjoints_in_gradients.bib
@@ -95,7 +95,7 @@
   title={Graphical model structure learning with l1-regularization},
   author={Schmidt, Mark},
   year={2010},
-  school={UNIVERSITY OF BRITISH COLUMBIA (Vancouver}
+  school={University of British Columbia (Vancouver)}
 }
 
 
@@ -114,5 +114,12 @@
    organization={The MathWorks, Inc.},
    title={MATLAB and Wavelet Toolbox Release R2015b},
    year=2015,
+}
+
+@misc{rideout_2016,
+   author={Brendan Rideout and Eva-Marie Nosal},
+   year=2016,
+   howpublished={Personal communication},
+   journal={University of Hawaii at Manoa},
 }
 
