--- a/ieee_spm/adjoints_in_gradients.tex
+++ b/ieee_spm/adjoints_in_gradients.tex
@@ -48,11 +48,11 @@ Boulder, CO, 80309 USA}}
 
 % For IEEE, Don't use math or other special symbols; greek probably okay.
 \begin{abstract}
-   First-order optimization algorithms require the gradient of the differentiable terms in the objective function.  We consider two example problems that have an Euclidean error term involving a linear operation on the problem variables.  The gradient of the Euclidean error term involves both the linear operator and its adjoint, which, in our examples, is not discussed in the literature.  The first example is an image deblurring problem, where the linear operation is multi-stage wavelet synthesis.  Our formulation of the adjoint holds for a variety of boundary conditions, which allows the formulation to generalize to a larger class of problems.  The second example is a blind channel estimation problem taken from the optimization literature; the linear operation is convolution, but with a slight twist.  In each example, we show how the adjoint operator can be applied efficiently.
+   First-order optimization algorithms require the gradient of the differentiable terms in the objective function, which often involves the adjoint of a linear operator.  We consider two example problems and derive methods for efficiently evaluating the adjoint operator.  The first example is an image deblurring problem, where we must compute efficiently the adjoint of multi-stage wavelet reconstruction.  Our formulation of the adjoint works for a variety of boundary conditions, which allows the formulation to generalize to a larger class of problems.  The second example is a blind channel estimation problem taken from the optimization literature where we must compute the adjoint of the convolution of two signals.  In each example, we show how the adjoint operator can be applied efficiently while leveraging existing software.
 \end{abstract}
 
 \subsection*{Prerequisites}
-The reader should be familiar with linear algebra, wavelets, and basic Fourier analysis.  Knowledge of first-order iterative optimization algorithms is beneficial for motivating the fast adjoint computation, but should not be necessary to understand the adjoint computation itself.\\
+The reader should be familiar with linear algebra, wavelets, and basic Fourier analysis.  Knowledge of first-order iterative optimization algorithms is beneficial for motivating need for a fast adjoint computation, but should not be necessary to understand the adjoint computation itself.\\
 
 
 %     How do we cite Vandenberghe's course notes? http://www.seas.ucla.edu/~vandenbe/ee236c.html
@@ -100,7 +100,7 @@ Digital images can be blurred through a variety of means.  For example, the opti
 
 In this example, we use the formulation used in \cite{beck_2009}.  It is assumed that the blurring action is known, and the deblurring problem is posed as an optimization problem, where the optimization variables are the wavelet coefficients of the recovered image.  Let $\mathcal{R}$ be a known blurring operator.  For instance, $\mathcal{R}$ could represent a Gaussian point spread function (PSF) under symmetric (reflexive) boundary conditions \cite{hansen_2006}.  Again, this model assumes that we have a good model of the blurring operator.\\
 
-Let $\mathcal{W}$ represent a multi-level wavelet synthesis operator with suitable boundary conditions.  Let $b$ be the observed, blurry image.  Let $\mathcal{A}=\mathcal{RW}$ be the linear operator that synthesizes an image from wavelet coefficients $x$ and then blurs the synthesized image under the blurring operator $\mathcal{R}$.  The image deblurring task is now readily posed as an optimization problem where we seek to recover sparse wavelet coefficients that accurately reconstruct the blurred image:
+Let $\mathcal{W}$ represent a multi-level wavelet reconstruction operator with suitable boundary conditions, $b$ be the observed, blurry image, and $\mathcal{A}=\mathcal{RW}$ be the linear operator that synthesizes an image from wavelet coefficients $x$ and then blurs the synthesized image under the blurring operator $\mathcal{R}$.  The image deblurring task from \cite{beck_2009} is posed as an optimization problem where we seek to recover a few sparse wavelet coefficients that accurately reconstruct the blurred image:
 
 \begin{equation}
 \label{eq:syn_problem}
@@ -109,11 +109,11 @@ Let $\mathcal{W}$ represent a multi-level wavelet synthesis operator with suitab
 
 \noindent This formulation is sometimes called the \emph{synthesis} formulation, since we synthesize an image $\mathcal{W}x$ from the wavelet coefficients in the optimization variable $x$.  We seek to find an $x$ that accurately reconstructs the blurred image $b$ while simultaneously has only a few nonzero entires.\\
 
-The gradient of the differentiable term $g(x)={\frac{1}{2}\|\mathcal{RW}x-b\|_2^2}$ is
+The gradient of the differentiable term $f(x)={\frac{1}{2}\|\mathcal{RW}x-b\|_2^2}$ is
 
-\[ \nabla g(x) = \mathcal{W}^\ast \mathcal{R}^\ast(\mathcal{RW}x-b). \] 
+\[ \nabla f(x) = \mathcal{W}^\ast \mathcal{R}^\ast(\mathcal{RW}x-b). \] 
 
-\noindent In the case of a blurring PSF, we can apply $\mathcal{R}$ and $\mathcal{R}^\ast$ efficiently in the Fourier domain via the FFT \cite{beck_2009, hansen_2006}.  Wavelet software packages (e.g. {\sc matlab} Wavelet Toolbox \cite{matlab_wt_2015}) implement fast discrete wavelet analysis and synthesis, which correspond to $\mathcal{W}^\dagger$ and $\mathcal{W}$ (we use $\mathcal{W}^\dagger$ to denote the Moore-Penrose pseudoinverse of $\mathcal{W}$).  However, the adjoint wavelet transform is not implemented in software packages and is not expressly mentioned in the literature \cite{mallat_2009, daubechies_1992, strang_1996}.\\
+\noindent In the case of a blurring PSF, we can apply $\mathcal{R}$ and $\mathcal{R}^\ast$ in $\mathcal{O}(N\log N)$ time in the Fourier domain via the FFT \cite{beck_2009, hansen_2006}.  Wavelet software packages (e.g. {\sc matlab} Wavelet Toolbox \cite{matlab_wt_2015}) implement discrete wavelet analysis and reconstruction in $\mathcal{O}(N)$ time; these operations correspond to $\mathcal{W}^\dagger$ and $\mathcal{W}$ (we use $\mathcal{W}^\dagger$ to denote the Moore-Penrose pseudoinverse of $\mathcal{W}$).  However, the adjoint wavelet transform is not implemented in software packages and is not expressly mentioned in the literature \cite{mallat_2009, daubechies_1992, strang_1996}.  We would like to find a way of computing the adjoint of wavelet reconstruction (and analysis) in $\mathcal{O}(N)$ time.\\
 %     how do we cite "the adjoint transform is not discussed"?
 %     Look in wavelet books.  Could say it's not discussed in standard textbooks such as Mallat, etc.  Check recent books (Daubechies' text probably doesn't have it, because it's old).
 %     The adjoint of the frame operator is mentioned in chapter 3 of Daubechies' "Ten Lectures".  It's given more detail in mallat_2009.
@@ -121,23 +121,14 @@ The gradient of the differentiable term $g(x)={\frac{1}{2}\|\mathcal{RW}x-b\|_2^
 
 %     Could cite personal communication with Gabriel Peyre.
 
-Note that adjoints can appear in many other contexts.  The problem
-
-\[ \min_x~ \ell(\mathcal{A}x,b), \] 
-
-\noindent where $\ell$ is a loss function with a differentiable component still requires the adjoint of $\mathcal{A}$.  For instance,
-
-\[ \min_x~ g(\mathcal{A}x,b) + h(x), \] 
-
-\noindent where $g(\mathcal{A}x,b)$ is convex and differentiable in $x$ and $h(x)$ is convex and nondifferentiable, is a rich model that is considered in \cite{beck_2009b}.  The image deblurring problem falls into this class of problems.  Adjoints may appear when the loss function $\ell(\mathcal{A}x,b)$ contains hinge or logistic losses, for example.\\
-% TODO I basically name-dropped hinge and logistic loss.  This doesn't add to the discussion.
+Note that adjoints can appear in many other contexts.  The problem of minimizing $\ell(\mathcal{A}x,b)$, a loss function with a differentiable component, still requires the adjoint of $\mathcal{A}$ due to the chain rule.  For instance, $\ell(\mathcal{A}x,b) = f(\mathcal{A}x,b)+g(x)$ where $f(\mathcal{A}x,b)$ is convex and differentiable in $x$ and $g(x)$ is convex and nondifferentiable, is a rich model that is considered in \cite{beck_2009b}. 
 
 \subsection{The adjoint for orthogonal wavelets}
 For orthogonal wavelets (e.g. Haar and more generally Daubechies wavelets), the pseudoinverse $\mathcal{W}^\dagger$ is exactly the adjoint $\mathcal{W}^\ast$, subject to appropriate (orthogonal) boundary conditions.  One can compute the gradient as
 
-\[ \nabla g(x) = \mathcal{W}^\dagger \mathcal{R}^\ast \left(\mathcal{RW}x-b\right). \] 
+\[ \nabla f(x) = \mathcal{W}^\dagger \mathcal{R}^\ast \left(\mathcal{RW}x-b\right). \] 
 
-\noindent Beck and Teboulle did exactly this with a three-stage discrete Haar wavelet transform \cite{beck_2009}.  For an example image, consider a standard resolution test chart, shown in Figure \ref{fig:original}.  We prescribe symmetric boundary conditions on the image, which will affect both $\mathcal{W}$, $\mathcal{R}$, and their adjoints.  Symmetric boundary conditions (compared to periodic or zero-padded boundary conditions) produce significantly fewer edge effects, and so are a natural choice.  Luckily, for orthogonal wavelets, the adjoint of $\mathcal{W}$ with symmetric boundary conditions is ``very close to'' the inverse $\mathcal{W}^\dagger=\mathcal{W}^{-1}$ with symmetric boundary conditions, so one can use existing wavelet libraries without much hassle, e.g. \cite{matlab_wt_2015}.  As we will see later, the wavelets give an orthonormal basis, but the boundary conditions are not orthogonal and this leads to errors in $\mathcal{W}^\ast\approx\mathcal{W}^\dagger$.  Therefore, to handle the orthogonal case completely correctly, we may use existing software fore wavelet reconstruction, but we must handle the symmetric boundary conditions separately.\\
+\noindent Beck and Teboulle did exactly this with a three-stage discrete Haar wavelet transform \cite{beck_2009}.  For an example image, consider a standard resolution test chart, shown in Figure \ref{fig:original}.  We prescribe symmetric boundary conditions on the image, which will affect both $\mathcal{W}$, $\mathcal{R}$, and their adjoints.  Symmetric boundary conditions (compared to periodic or zero-padded boundary conditions) produce significantly fewer edge effects, and so are a natural choice.  Fortunately, for orthogonal wavelets, the adjoint of $\mathcal{W}$ with symmetric boundary conditions is ``very close to'' the inverse $\mathcal{W}^\dagger=\mathcal{W}^{-1}$ with symmetric boundary conditions, so one can use existing wavelet libraries without much hassle, e.g. \cite{matlab_wt_2015}.  As we will see later, the wavelets give an orthonormal basis, but the boundary conditions are not orthogonal and this leads to errors in $\mathcal{W}^\ast\approx\mathcal{W}^\dagger$.  Therefore, to handle the orthogonal case correctly, we may use existing software for wavelet reconstruction, but we must handle the symmetric boundary conditions separately.\\
 
 %     do existing wavelet libraries actually do the extension pinv adjoint correctly?
 %     No, but the extension operator is "close" to the extension pinv adjoint, so it's approx correct.
@@ -152,7 +143,7 @@ For orthogonal wavelets (e.g. Haar and more generally Daubechies wavelets), the 
    \label{fig:original}
 \end{figure}
 
-Figure \ref{fig:compare_db1_sym} shows the deblurred image after 2500 iterations of FISTA, a fast proximal gradient method, developed by Beck and Teboulle \cite{beck_2009}.  The wavelet synthesis operator $\mathcal{W}$ is taken to be a three-stage Haar discrete wavelet transform with symmetric boundary conditions.  We set $\lambda=2\times 10^{-5}$.  We use both the true adjoint $\mathcal{W}^\ast$ and the approximation $\mathcal{W}^\dagger$.  Using the true adjoint, the image reconstruction relative error (vs. the unblurred image) is $8.91\times10^-4$ and $31.8\%$ of the coefficients are nonzero.  Using the pseudoinverse approximation, the relative error is $8.91\times 10^-4$ and $32.1\%$ of the coefficients are nonzero.  In this case the pseudoinverse approximation works extremely well.
+Figure \ref{fig:compare_db1_sym} shows the deblurred image after 2500 iterations of FISTA, a fast proximal gradient method, developed by Beck and Teboulle \cite{beck_2009}.  The wavelet reconstruction operator $\mathcal{W}$ is taken to be a three-stage Haar discrete wavelet transform with symmetric boundary conditions.  We set $\lambda=2\times 10^{-5}$.  We use both the true adjoint $\mathcal{W}^\ast$ and the approximation $\mathcal{W}^\dagger$.  Using the true adjoint, the image reconstruction relative error (vs. the unblurred image) is $8.91\times10^-4$ and $31.8\%$ of the coefficients are nonzero.  Using the pseudoinverse approximation, the relative error is $8.91\times 10^-4$ and $32.1\%$ of the coefficients are nonzero.  In this case the pseudoinverse approximation works extremely well.
 
 %For the figure we use ${\mathcal{W}^\ast \approx\mathcal{W}^\dagger}$.  Using this approximation, the image reconstruction relative error (vs. unblurred image) is $7.20\times10^{-2}$ and $72.99\%$ of the coefficients are nonzero.  Jumping ahead a bit, if we handle the boundary conditions properly (see the following subsection), then the reconstruction relative error is $7.21\times10^{-2}$ and $72.89\%$ of the coefficients are nonzero.  In this case the approximation works extremely well.\\
 
@@ -160,27 +151,26 @@ Figure \ref{fig:compare_db1_sym} shows the deblurred image after 2500 iterations
    \centering
    %\includegraphics[width=0.8\columnwidth]{figures/cameraman_rec_200_db1_sym_trim.pdf}
    \includegraphics[width=0.8\columnwidth]{figures/compare_db1_sym_2500.png}
-   \caption{Deblurred image after 2500 iterations of FISTA with $\mathcal{W}$ a three-stage Haar transform with symmetric boundary conditions.  The left half of the figure shows the deblurred image using the proper adjoint $\mathcal{W}^\ast$.  The top-right shows a zoomed-in view using $\mathcal{W}^\ast$; the bottom-right shows the same zoomed-in view using $\mathcal{W}^\dagger$ and 2500 iterations of FISTA.}
+   \caption{Deblurred image after 2500 iterations of FISTA with $\mathcal{W}$ a three-stage Haar transform with symmetric boundary conditions.  The left half of the figure shows the deblurred image using the true adjoint $\mathcal{W}^\ast$.  The top-right shows a zoomed-in view using $\mathcal{W}^\ast$; the bottom-right shows the same zoomed-in view using $\mathcal{W}^\dagger$ and 2500 iterations of FISTA.}
    \label{fig:compare_db1_sym}
 \end{figure}
 
 
 \subsection{The adjoint for biorthogonal wavelets}
-For biorthogonal wavelets, we no longer have $\mathcal{W}^\ast=\mathcal{W}^\dagger$.  Since we have relaxed ourselves to biorthogonal wavelets (which handle symmetric boundary conditions nicely), it is perhaps too much to ask that the adjoint of the primal wavelet synthesis operator involves only the primal wavelets.  Let us recall briefly the pertinent aspects of frames of $\reals^d$.  These facts are described in more detail and generality in \cite{mallat_2009}; we restrict ourselves to the finite dimensional case for clarity, but the reader should note that the results generalize immediately.\\
+For biorthogonal wavelets, we no longer have $\mathcal{W}^\ast=\mathcal{W}^\dagger$.  Since we have relaxed ourselves to biorthogonal wavelets (which handle symmetric boundary conditions nicely), it is perhaps too much to ask that the adjoint of the primal wavelet reconstruction operator involves only the primal wavelets.  Let us recall briefly the pertinent aspects of frames of $\reals^d$.  These facts are described in more detail and generality in \cite{mallat_2009}; we restrict ourselves to the finite dimensional case for clarity, but the reader should note that the results generalize immediately.\\
 
-Let $f\in\reals^d$ be an arbitrary vector.  Let $\{\phi_n\}_{n=1}^p$, $p\ge d$, be a set of vectors in $\reals^d$.  The set of vectors $\{\phi_n\}_{n=1}^p$ is called a frame of $\reals^d$ if there exists a constant $A>0$ such that
-
-\[ \forall f\in\reals^d, \quad A\|f\|^2 \le \|\Phi f\|, \] 
-
-\noindent where $\Phi$ is the frame analysis operator defined as the matrix
+Let $y\in\reals^N$ be an arbitrary signal vector and$\{\phi_i\}_{i=1}^p$, $p\ge N$, be a set of vectors in $\reals^N$.  Define the analysis operator $\Phi$ as the $p\times N$ matrix
 
 \[ \Phi = \begin{bmatrix}\phi_1^T\\\vdots\\\phi_p^T\end{bmatrix}. \] 
 
-   \noindent The frame analysis operator computes the expansion coefficients of $f$ in the frame $\{\phi_n\}$.  The frame synthesis operator $\Phi^\ast$ constructs a vector in $\reals^d$ given some expansion coefficients.  Since $\{\phi_n\}$ is assumed to be a frame, $\Phi^\ast\Phi$ is invertible and we may define the Moore-Penrose pseudoinverse $\Phi^\dagger$, which implements reconstruction in the frame as $\Phi^\dagger=\left(\Phi^\ast\Phi\right)^{-1}\Phi$.\\
+   \noindent If $\Phi$ has full rank, we say that $\{\phi_i\}$ is a frame and we call $\Phi$ the frame analysis operator.  Henceforth we assume $\{\phi_i\}$ is a frame.\\
+   
+   The product $\Phi u$ computes the expansion coefficients of $u$ in the frame $\{\phi_i\}$.  The frame synthesis operator $\Phi^\ast$ constructs a vector in $\reals^N$ given some expansion coefficients.  Since $\{\phi_i\}$ is assumed to be a frame, $\Phi^\ast\Phi$ is invertible and we may define the Moore-Penrose pseudoinverse $\Phi^\dagger$, which implements reconstruction in the frame as $\Phi^\dagger=\left(\Phi^\ast\Phi\right)^{-1}\Phi$.\\
 
-   A dual frame can be associated with a (primal) frame by defining the dual frame vectors $\tilde{\phi}_n = \left(\Phi^\ast\Phi\right)^{-1}\phi_n$ for $n=1,...,p$.  We may define analogously the dual frame analysis operator $\tilde{\Phi}$ and dual frame synthesis operator $\tilde{\Phi}^\ast$.\\
+   A dual frame can be associated with a (primal) frame by defining the dual frame vectors $\tilde{\phi}_i = \left(\Phi^\ast\Phi\right)^{-1}\phi_i$ for $i=1,...,p$.  We may define analogously the dual frame analysis operator $\tilde{\Phi}$ and dual frame synthesis operator $\tilde{\Phi}^\ast$.\\
 
 % [[[ The old, general Hilbert space discussion
+% XXX the indexes here are different!
 %Let $\mathcal{H}$ be a Hilbert space and take $f\in\mathcal{H}$ to be an arbitrary vector in the Hilbert space.  Let $\{\phi_n\}_{n\in\Gamma}$, where $\Gamma$ is an index set, be a set of vectors in $\mathcal{H}$.  The set of vectors $\{\phi_n\}_{n\in\Gamma}$ is called a frame of $\mathcal{H}$ if there exists constants $B\ge A > 0$ such that
 %
 %\[ \forall f\in \mathcal{H}, \quad A\|f\|^2 \le \sum_{n\in\Gamma} |\langle f,\phi_n\rangle|^2\le B \|f\|^2. \] 
@@ -198,9 +188,9 @@ Let $f\in\reals^d$ be an arbitrary vector.  Let $\{\phi_n\}_{n=1}^p$, $p\ge d$, 
 %\[ \forall n\in \Gamma, \quad \tilde{\Phi}f[n] = \langle f,\tilde{\phi}_n\rangle, \quad \text{where } \tilde{\phi}_n = \left(\Phi^\ast\Phi\right)^{-1}\phi_n. \] 
 % ]]]
 
-   \noindent A fundamental relationship between the primal and dual frames is $\tilde{\Phi}^\ast = \Phi^\dagger$.  Notice that we also have $\Phi^\ast = \tilde{\Phi}^\dagger$; this relation provides the basic idea for computing the adjoint of the discrete wavelet synthesis operator $\mathcal{W}$.  For biorthogonal wavelets, the exist fast transforms for both the primal and dual wavelets, which allows us to efficiently compute the adjoint.  Wavelet software typically compute wavelet analysis and reconstruction, and we now have a way to compute adjoints via functions in wavelet libraries.\\
+   \noindent A fundamental relationship between the primal and dual frames is $\tilde{\Phi}^\ast = \Phi^\dagger$.  Notice that we also have $\Phi^\ast = \tilde{\Phi}^\dagger$; this relation provides the basic idea for computing the adjoint of the discrete wavelet reconstruction operator $\mathcal{W}$.  For biorthogonal wavelets, the exist fast transforms for both the primal and dual wavelets, which allows us to efficiently compute the adjoint.  Wavelet software typically compute wavelet analysis and reconstruction, and we now have a way to compute adjoints via functions in wavelet libraries.\\
    
-   Ignoring boundary effects and recalling that we defined the deblurring problem in terms of the wavelet synthesis operator $\mathcal{W}=\Phi^\dagger$, we have the following:
+   Ignoring boundary effects and recalling that we defined the deblurring problem in terms of the wavelet reconstruction operator $\mathcal{W}=\Phi^\dagger$, we have the following:
 
 \begin{align*}
    \mathcal{W}^\ast &= \left(\Phi^\dagger\right)^\ast = \left(\left(\Phi^\ast\Phi\right)^{-1}\Phi^\ast\right)^\ast = \Phi\left(\Phi^\ast\Phi\right)^{-1}\\ 
@@ -208,7 +198,19 @@ Let $f\in\reals^d$ be an arbitrary vector.  Let $\{\phi_n\}_{n=1}^p$, $p\ge d$, 
                     &= \tilde{\Phi},
 \end{align*}
 
-\noindent where we have used various well-known properties of the pseudoinverse.  Thus, ignoring boundary conditions, the adjoint of wavelet synthesis is dual wavelet analysis.  Note that in the case of orthogonal wavelets, $\Phi^\ast\Phi$ is the identity, the dual frame is identically the primal frame, and ${\mathcal{W}^\ast = \tilde{\Phi}=\Phi=\mathcal{W}^\dagger}$, exactly as before.\\
+\noindent where we have used various well-known properties of the pseudoinverse.  Thus, ignoring boundary conditions, the adjoint of wavelet reconstruction is dual wavelet analysis.  Note that in the case of orthogonal wavelets, $\Phi^\ast\Phi$ is the identity, the dual frame is identically the primal frame, and ${\mathcal{W}^\ast = \tilde{\Phi}=\Phi=\mathcal{W}^\dagger}$, exactly as before.\\
+
+\begin{table}[ht]
+   \centering
+   \caption{A few primal and dual frame relationships.}%TODO
+   \label{tab:wave_relations}
+   \begin{tabular}{lll}
+      &Primal frame&Dual frame\\\hline\\[-0.5em]
+      Analysis & $\Phi = \mathcal{W}^\dagger$ & $\tilde{\Phi}=\left(\Phi^\dagger\right)^\ast$\\\\[-0.5em]
+      Synthesis & $\Phi^\ast = \left(\mathcal{W}^\dagger\right)^\ast$ & $\tilde{\Phi}^\ast = \Phi^\dagger$ \\\\[-0.5em]
+      Reconstruction & $\Phi^\dagger = \mathcal{W}$ & $\tilde{\Phi}^\dagger = \Phi^\ast$
+   \end{tabular}
+\end{table}
 
 It now remains to include boundary conditions.  A standard method for imposing boundary conditions on finite, discrete signals is to extend the signal to match those boundary conditions and perform the wavelet operations on the extended signal, assuming zero boundary conditions for the extended signal; this is the approach used in {\sc matlab}'s Wavelet Toolbox \cite{matlab_wt_2015}.  If we let $\mathcal{E}$ be the extension operator and $\mathcal{W}^\dagger_\text{zpd}$ be the wavelet analysis operator for extended signals under zero boundary conditions, we can write wavelet analysis as 
 
@@ -477,7 +479,7 @@ Figure \ref{fig:adjoint_convergence} shows the convergence of the objective valu
 %
 %% ]]]
 
-%TODO update this section to use matched filter derivation instead of A(hs^T) and Hankel business.
+
 \section{Example 2: Blind Channel Estimation}
 % [[[
 %Matched filter derivation: \cite{claerbout_1992}\\
@@ -521,7 +523,7 @@ Let $f(h,s)=\|h\ast s -x\|_2^2$ be the differentiable part of the objective.  Fi
 Now that we can compute the required gradients, we can use existing first-order methods.  As an example, we consider a simulated underwater acoustic channel.  A single unknown real source signal is broadcast over two acoustic channels with unknown real impulse responses.  Additionally, zero mean Gaussian noise with standard deviation $0.005$ is added to each output signal.  We extend the blind channel estimation problem to two channels quite naturally:
 
 \begin{align*}
-   \min_{h_i,s} ~&\sum_{i=1}^2\left(\left\|\mathcal{A}(h_is^T) - x_i\right\|_2^2 + \lambda_{h}\|h_i\|_1\right) + \lambda_s\|s\|_1
+   \min_{h_i,s} ~&\sum_{i=1}^2\left(\left\|h_i\ast s - x_i\right\|_2^2 + \lambda_{h}\|h_i\|_1\right) + \lambda_s\|s\|_1
 \end{align*}
 
 \noindent Further, we may add a differentiable total-variation-like term.  The addition of a total-variation-like term may induce sharp transitions and stretches of nearly constant signal values (e.g. where the channel impulse response is constant for brief periods).  The true total-variation (TV) norm of $h$ may be computed as $\|\mathcal{D}h\|_1$, where $\mathcal{D}$ is the operator that subtracts consecutive pairs of elements of $h$: $\{\mathcal{D}h\}_j = h_{j+1} - h_j$.  We can in fact form $\mathcal{D}$ as a sparse matrix and compute $\mathcal{D}^\ast$ easily.  To ``soften'' the TV norm to a differentiable term, we may use the Huber function, defined as
@@ -530,36 +532,33 @@ Now that we can compute the required gradients, we can use existing first-order 
 
 \noindent The Huber function is commonly used in regression with outliers, as it is linear for $|z|>\delta$, and so it is less sensitive to outliers.  Unlike $\|\cdot\|_1$, the Huber function is differentiable for all $z$.  We can approximate the TV norm with ${\|h\|_\text{TV} \defeq\|\mathcal{D}h\|_1 \approx L_\delta(\mathcal{D}h)/\delta}$.  The augmented problem, with the differentiable total-variation-like term is
 
-%TODO how to typeset this?
 \begin{align}
    \label{eq:bce_aug}
-   \min_{h_i,s} ~&\sum_{i=1}^2\biggl(\left\|\mathcal{A}(h_is^T)-x_i\right\|_2^2 + \lambda_{h,\text{TV}}L_\delta(\mathcal{D}h_i)/\delta\nonumber\\
-                 &+ \lambda_{h}\|h_i\|_1\biggr) + \lambda_s\|s\|_1
+   f(h_i,s) &= \|h_i\ast s - x_i\|_2^2 + \lambda_{h,\text{TV}}L_\delta(\mathcal{D}h_i)/\delta,\nonumber\\
+   \min_{h_i,s} ~&\sum_{i=1}^2\left(f(h_i,s) + \lambda_h\|h_i\|_1\right) + \lambda_s\|s\|_1.
+   %\min_{h_i,s} ~&\sum_{i=1}^2\biggl(\left\|h_i\ast s-x_i\right\|_2^2 + \lambda_{h,\text{TV}}L_\delta(\mathcal{D}h_i)/\delta\nonumber\\
+   %              &+ \lambda_{h}\|h_i\|_1\biggr) + \lambda_s\|s\|_1
    %\min_{h_i,s} ~&\|\mathcal{A}(h_1s^T)-x_1\|_2^2 + \lambda_{h,\text{TV}}L_\delta(\mathcal{D}h_1)/\delta + \lambda_{h}\|h_1\|_1+ \lambda_s\|s\|_1\nonumber\\
    %              &\|\mathcal{A}(h_2s^T)-x_2\|_2^2 + \lambda_{h,\text{TV}}L_\delta(\mathcal{D}h_2)/\delta + \lambda_{h}\|h_2\|_1.
 \end{align}
 
 %TODO how to cite Brendan's data?
-It is straightforward to include the ``soft'' TV term in the gradients, and we can use standard first-order algorithms to solve the augmented problem.  Brendan Rideout of the University of Hawai`i provided simulated data containing an impulsive source, two underwater acoustic channel impulse responses, and the two outputs of the underwater channels.  The simulation also added zero mean Gaussian noise with standard deviation $0.005$.  We used the two channel outputs to attempt to recover the impulsive source and channel impulse responses.\\
+It is straightforward to include the ``soft'' TV term in the gradients, and we can use standard first-order algorithms to solve the augmented problem.  Simulated data containing an impulsive source, two underwater acoustic channel impulse responses, and the two outputs of the underwater channels were provided by \cite{rideout_2016}.  The simulation also added zero mean Gaussian noise with standard deviation $0.005$.  We used the two channel outputs to attempt to recover the impulsive source and channel impulse responses.\\
 
-We take $\lambda_h = 0.1$, $\lambda_s=0.01$, $\lambda_{h,\text{TV}}=0.01$, and $\delta=0.1$ for the Huber functions $L_\delta(\cdot)$.  We initialized $h_i$ and $s$ with zero mean Gaussian random numbers with unit standard deviation.  In practice, we may not know the true lengths of $h_i$ and $s$, $K$ and $N$, respectively.  We do know the length of the observed signals, which is $K+N-1$.  In this example, $K=894$ and $N=1717$, and we guess $K_\text{est}=794$ and $N_\text{est}=1817$.\footnote{This choice of $K_\text{est}$ and $N_\text{est}$ is not particularly special.  We chose these values because \texttt{x\_est} is not quite correct, but does show certain artifacts that would allow us to revise our estimates of $K_\text{est}$ and $N_\text{est}$.}  We used L1General to solve the augmented problem (\ref{eq:bce_aug}) \cite{schmidt_2010}.\\
+We take $\lambda_h = 0.1$, $\lambda_s=0.01$, $\lambda_{h,\text{TV}}=0.01$, and $\delta=0.1$ for the Huber functions $L_\delta(\cdot)$.  We initialized $h_i$ and $s$ with zero mean Gaussian random numbers with unit standard deviation.  In practice, we may not know the true lengths of $h_i$ and $s$, $K$ and $N$, respectively.  We do know the length of the observed signals, which is $K+N-1$.  In this example, $K=894$ and $N=1717$, and we guess $K_\text{est}=844$ and $N_\text{est}=1767$.  We used L1General to solve the augmented problem (\ref{eq:bce_aug}) \cite{schmidt_2010}.  The initial entries of $h_i$ and $s$ were drawn from the standard normal distribution.\\
 
-The results of the recovery are shown in Figure \ref{fig:bce_rec}.  We show the output and channel impulse response for only the first channel, as the second channel is similar.  Researchers studying the acoustic channel are mainly interested in the time delays between peaks and relative phase shifts.  Besides the overall magnitude ambiguity and time shift (which are inconsequential for acoustic channel estimation), peaks 7 and 8 have undergone a phase and time shift.  A careful observation of \texttt{x\_est} would lead us to revise our estimates of $K$ and $N$, which does lead to correctly estimating peaks 7 and 8.\\
+The results of the recovery are shown in Figure \ref{fig:bce_rec}.  We show the output and channel impulse response for only the first channel; the second channel is similar.  Researchers studying the acoustic channel are mainly interested in the time delays between peaks and relative phase shifts\cite{rideout_2016}.  Besides the overall magnitude ambiguity and time shift, it appears we will be able to accurately estimate the time delays and phase shifts between the peaks of the channel response.
 
-%TODO Do we want to show slightly bad recovery and mention how we can fix it by observing x_est?
-%     Or do we want to just show the good recovery right off the bat?  Maybe this would be better for the
-%     lecture note...
 \begin{figure}
    \centering
-   \includegraphics[width=0.5\textwidth]{figures/bce_rec_003_x_trim.pdf}
-   \includegraphics[width=0.5\textwidth]{figures/bce_rec_003_h_trim.pdf}
-   \includegraphics[width=0.5\textwidth]{figures/bce_rec_003_s_trim.pdf}
-   \caption{Blind channel estimation via problem (\ref{eq:bce_aug}) for underwater acoustic impulsive source.  Shown are the true and estimated first channel output, first channel impulse response, and source.  The estimated source signal and impulse responses appear remarkably similar to the true signals.}
+   \includegraphics[width=0.5\textwidth]{figures/bce_rec_004_x_trim.pdf}
+   \includegraphics[width=0.5\textwidth]{figures/bce_rec_004_h_trim.pdf}
+   \includegraphics[width=0.5\textwidth]{figures/bce_rec_004_s_trim.pdf}
+   \caption{Blind channel estimation via problem (\ref{eq:bce_aug}) for a simulated underwater acoustic impulsive source.  Shown are the true and estimated first channel output, first channel impulse response, and source.  There are obvious magnitude and time shift differences, but the estimated channel output and channel impulse response are remarkably similar in structure and potentially useful for studying the underwater channel.}
    \label{fig:bce_rec}
 \end{figure}
 
 % ]]]
-
 
 
 \section{Discussion}
