Reworked a lot of deblurring section

--- a/ieee_spm/adjoints_in_gradients.bib
+++ b/ieee_spm/adjoints_in_gradients.bib
@@ -91,6 +91,18 @@
   publisher={IEEE}
 }
 
+@article{wang_2004,
+  title={Image quality assessment: from error visibility to structural similarity},
+  author={Wang, Zhou and Bovik, Alan Conrad and Sheikh, Hamid Rahim and Simoncelli, Eero P},
+  journal={Image Processing, IEEE Transactions on},
+  volume={13},
+  number={4},
+  pages={600--612},
+  year={2004},
+  publisher={IEEE}
+}
+
+
 @phdthesis{schmidt_2010,
   title={Graphical model structure learning with l1-regularization},
   author={Schmidt, Mark},
@@ -98,6 +110,12 @@
   school={University of British Columbia (Vancouver)}
 }
 
+@phdthesis{rout_2003,
+  title={Orthogonal vs. biorthogonal wavelets for image compression},
+  author={Rout, Satyabrata},
+  year={2003},
+  school={Virginia Tech}
+}
 
 @inproceedings{romberg_2013,
   title={Multichannel blind deconvolution using low rank recovery},
